--- a/index.html
+++ b/index.html
@@ -19,7 +19,45 @@
 
 <body>
 
-  
+  <header id="header">
+      <nav class="navbar navbar-expand-lg px-4">
+        <a href="#" class="navbar-brand">
+            <img src="/img/logo.svg" alt="main icon">
+        </a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
+            <span class="toggler-icon">
+                <i class="fas fa-bar"></i>
+            </span>
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="navbar-nav text-capitalize mx-auto">
+                <li class="nav-item active">
+                    <a href="#header" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="#about" class="nav-link">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="#store" class="nav-link">Store</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="#services" class="nav-link">Services</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="#pizza" class="nav-link">Order</a>
+                </li>
+            </ul>
+            <div class="nav-info-items d-none d-lg-flex">
+                <div class="nav-info align-items-center d-flex justify-content-between mx-lg-5">
+                    <span class="info-icon mx-lg-3">
+                        <i class="fas fa-phone"></i>
+                    </span>
+                    <p class="mb-0">+254 715 051 497</p>
+                </div>
+            </div>
+        </div>
+      </nav>
+  </header>
 
 
   <!-- jquery -->
