--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header id="header">
       <nav class="navbar navbar-expand-lg px-4">
         <a href="#" class="navbar-brand">
-            <img src="/img/logo.svg" alt="main icon">
+            <img src="/img/logo.png" alt="main icon" width="100px" height="60px">
         </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
             <span class="toggler-icon">
@@ -53,6 +53,16 @@
                         <i class="fas fa-phone"></i>
                     </span>
                     <p class="mb-0">+254 715 051 497</p>
+                </div>
+                <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
+                    <span class="cart-info_icon mr-lg-3">
+                        <i class="fas fa-shopping-cart"></i>
+                        <p class="mb-0 text-capitilize">
+                            <span id="item-count">2</span>
+                            items - Kshs.
+                            <span id="item-total">1000</span>
+                        </p>
+                    </span>
                 </div>
             </div>
         </div>
