--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
             <span class="toggler-icon">
-                <i class="fas fa-bar"></i>
+                <i class="fas fa-bars"></i>
             </span>
         </button>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -57,12 +57,12 @@
                 <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
                     <span class="cart-info_icon mr-lg-3">
                         <i class="fas fa-shopping-cart"></i>
+                    </span>
                         <p class="mb-0 text-capitilize">
                             <span id="item-count">2</span>
                             items - Kshs.
                             <span id="item-total">1000</span>
                         </p>
-                    </span>
                 </div>
             </div>
         </div>
