--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header id="header">
       <nav class="navbar navbar-expand-lg px-4">
         <a href="#" class="navbar-brand">
-            <img src="/img/logo.png" alt="main icon" width="100px" height="60px">
+            <img src="./img/logo.png" alt="main icon" width="100px" height="60px">
         </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
             <span class="toggler-icon">
@@ -67,6 +67,18 @@
             </div>
         </div>
       </nav>
+      <div class="container-fluid">
+          <div class="row max-height justify-content-center align-items-center">
+              <div class="col-10 mx-auto banner text-center">
+                  <h1 class="text-capitalize">
+                      Welcome to 
+                      <br>
+                      <strong class="banner-title">Pizza <br>On Dial</strong>
+                  </h1>
+                  <a href="#store" class="btn banner-link text-uppercase my-2">Buy Now</a>
+              </div>
+          </div>
+      </div>
   </header>
 
 
