--- a/index.html
+++ b/index.html
@@ -1,93 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- bootstrap css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- main css -->
-  <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="css/all.css" />
+    <title>Pizza On Dial</title>
+    <style></style>
+  </head>
 
-  <!-- font awesome -->
-  <link rel="stylesheet" href="css/all.css">
-  <title>Pizza On Dial</title>
-  <style>
-  </style>
-</head>
-
-<body>
-
-  <header id="header">
+  <body>
+    <header id="header">
       <nav class="navbar navbar-expand-lg px-4">
         <a href="#" class="navbar-brand">
-            <img src="./img/logo.png" alt="main icon" width="100px" height="60px">
+          <img
+            src="./img/logo.png"
+            alt="main icon"
+            width="100px"
+            height="60px"
+          />
         </a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
-            <span class="toggler-icon">
-                <i class="fas fa-bars"></i>
-            </span>
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#myNavbar"
+        >
+          <span class="toggler-icon">
+            <i class="fas fa-bars"></i>
+          </span>
         </button>
         <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="navbar-nav text-capitalize mx-auto">
-                <li class="nav-item active">
-                    <a href="#header" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item active">
-                    <a href="#about" class="nav-link">About</a>
-                </li>
-                <li class="nav-item active">
-                    <a href="#store" class="nav-link">Store</a>
-                </li>
-                <li class="nav-item active">
-                    <a href="#services" class="nav-link">Services</a>
-                </li>
-                <li class="nav-item active">
-                    <a href="#pizza" class="nav-link">Order</a>
-                </li>
-            </ul>
-            <div class="nav-info-items d-none d-lg-flex">
-                <div class="nav-info align-items-center d-flex justify-content-between mx-lg-5">
-                    <span class="info-icon mx-lg-3">
-                        <i class="fas fa-phone"></i>
-                    </span>
-                    <p class="mb-0">+254 715 051 497</p>
-                </div>
-                <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
-                    <span class="cart-info_icon mr-lg-3">
-                        <i class="fas fa-shopping-cart"></i>
-                    </span>
-                        <p class="mb-0 text-capitilize">
-                            <span id="item-count">2</span>
-                            items - Kshs.
-                            <span id="item-total">1000</span>
-                        </p>
-                </div>
+          <ul class="navbar-nav text-capitalize mx-auto">
+            <li class="nav-item active">
+              <a href="#header" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item active">
+              <a href="#store" class="nav-link">Store</a>
+            </li>
+            <li class="nav-item active">
+              <a href="#services" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item active">
+              <a href="#pizza" class="nav-link">Order</a>
+            </li>
+          </ul>
+          <div class="nav-info-items d-none d-lg-flex">
+            <div
+              class="nav-info align-items-center d-flex justify-content-between mx-lg-5"
+            >
+              <span class="info-icon mx-lg-3">
+                <i class="fas fa-phone"></i>
+              </span>
+              <p class="mb-0">+254 715 051 497</p>
             </div>
+            <div
+              id="cart-info"
+              class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5"
+            >
+              <span class="cart-info_icon mr-lg-3">
+                <i class="fas fa-shopping-cart"></i>
+              </span>
+              <p class="mb-0 text-capitilize">
+                <span id="item-count">2</span>
+                items - Kshs.
+                <span id="item-total">1000</span>
+              </p>
+            </div>
+          </div>
         </div>
       </nav>
       <div class="container-fluid">
-          <div class="row max-height justify-content-center align-items-center">
-              <div class="col-10 mx-auto banner text-center">
-                  <h1 class="text-capitalize">
-                      Welcome to 
-                      <br>
-                      <strong class="banner-title">Pizza <br>On Dial</strong>
-                  </h1>
-                  <a href="#store" class="btn banner-link text-uppercase my-2">Buy Now</a>
-              </div>
+        <div class="row max-height justify-content-center align-items-center">
+          <div class="col-10 mx-auto banner text-center">
+            <h1 class="text-capitalize">
+              Welcome to
+              <br />
+              <strong class="banner-title">Pizza <br />On Dial</strong>
+            </h1>
+            <a href="#store" class="btn banner-link text-uppercase my-2"
+              >Buy Now</a
+            >
           </div>
+        </div>
       </div>
-  </header>
+    </header>
+    <section class="about py-5" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-10 mx-auto col-md-6 my-5">
+            <h1 class="text-capitalize">
+              about <strong class="banner-title">us</strong>
+            </h1>
+            <p class="my-4 text-muted w-75">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
+              maxime dolorum modi itaque porro aperiam, suscipit unde ducimus
+              numquam iste dolores reiciendis, optio excepturi reprehenderit
+              saepe, ea quaerat et ad!
+            </p>
+            <a href="#" class="btn btn-outline-secondary text-uppercase">Buy Now</a>
+          </div>
+          <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
+            <div class="about-img_container">
+              <img src="./img/pizza1.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-
-  <!-- jquery -->
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <!-- bootstrap js -->
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- script js -->
-  <script src="js/app.js"></script>
-</body>
-
+    <!-- jquery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <!-- bootstrap js -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- script js -->
+    <script src="js/app.js"></script>
+  </body>
 </html>
