--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               numquam iste dolores reiciendis, optio excepturi reprehenderit
               saepe, ea quaerat et ad!
             </p>
-            <a href="#" class="btn btn-outline-secondary text-uppercase">Buy Now</a>
+            <a href="#" class="btn btn-black text-uppercase">Buy Now</a>
           </div>
           <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
             <div class="about-img_container">
@@ -115,6 +115,38 @@
           </div>
         </div>
       </div>
+    </section>
+    <section id="store" class="store py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-10 mx-auto col-sm-6 text-center">
+                    <h1 class="text-capitalize">our <strong class="banner-title">store</strong></h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto d-flex justify-content-around sortBtn flex-wrap">
+                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">all</a>
+                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">BBQ</a>
+                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">PERIPERI</a>
+                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">HAWAIIAN</a>
+                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">MARGHERITA</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-10 mx-auto col-md-6">
+                    <form>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text search-box" id="search-icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="pizza..." id="search-item">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- jquery -->
