--- a/index.html
+++ b/index.html
@@ -117,33 +117,231 @@
       </div>
     </section>
     <section id="store" class="store py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-10 mx-auto col-sm-6 text-center">
+            <h1 class="text-capitalize">
+              our <strong class="banner-title">store</strong>
+            </h1>
+          </div>
+        </div>
+        <div class="row">
+          <div
+            class="col-lg-8 mx-auto d-flex justify-content-around sortBtn flex-wrap"
+          >
+            <a
+              href="#"
+              class="btn btn-black text-uppercase filter-btn m-2"
+              data-filter="all"
+              >all</a
+            >
+            <a
+              href="#"
+              class="btn btn-black text-uppercase filter-btn m-2"
+              data-filter="all"
+              >BBQ</a
+            >
+            <a
+              href="#"
+              class="btn btn-black text-uppercase filter-btn m-2"
+              data-filter="all"
+              >PERIPERI</a
+            >
+            <a
+              href="#"
+              class="btn btn-black text-uppercase filter-btn m-2"
+              data-filter="all"
+              >HAWAIIAN</a
+            >
+            <a
+              href="#"
+              class="btn btn-black text-uppercase filter-btn m-2"
+              data-filter="all"
+              >MARGHERITA</a
+            >
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-10 mx-auto col-md-6">
+            <form>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text search-box" id="search-icon">
+                    <i class="fas fa-search"></i>
+                  </span>
+                </div>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="pizza..."
+                  id="search-item"
+                />
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="row store-items" id="store-items">
+          <div
+            class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+            data-item="bbq"
+          >
+            <div class="card single-item">
+              <div class="img-container">
+                <img
+                  src="./img/bbq.jpg"
+                  class="card-img-top store-img"
+                  alt=""
+                />
+                <span class="store-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body">
+                <div
+                  class="card-text d-flex justify-content-between text-capitalize"
+                >
+                  <h5 class="store-item-name">BBQ item</h5>
+                  <h5 class="store-item-value">
+                    Kshs.
+                    <strong
+                      class=""
+                      id="storm-item-price"
+                      class="font-weight-bold"
+                      >1000</strong
+                    >
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+            class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+            data-item="bbq"
+          >
+            <div class="card single-item">
+              <div class="img-container">
+                <img
+                  src="./img/hawaian.jpg"
+                  class="card-img-top store-img"
+                  alt=""
+                />
+                <span class="store-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body">
+                <div
+                  class="card-text d-flex justify-content-between text-capitalize"
+                >
+                  <h5 class="store-item-name">HAWAIIAN item</h5>
+                  <h5 class="store-item-value">
+                    Kshs.
+                    <strong
+                      class=""
+                      id="storm-item-price"
+                      class="font-weight-bold"
+                      >850</strong
+                    >
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+            class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+            data-item="bbq"
+          >
+            <div class="card single-item">
+              <div class="img-container">
+                <img
+                  src="./img/periperi.jpg"
+                  class="card-img-top store-img"
+                  alt=""
+                />
+                <span class="store-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body">
+                <div
+                  class="card-text d-flex justify-content-between text-capitalize"
+                >
+                  <h5 class="store-item-name">PERIPERI item</h5>
+                  <h5 class="store-item-value">
+                    Kshs.
+                    <strong
+                      class=""
+                      id="storm-item-price"
+                      class="font-weight-bold"
+                      >1000</strong
+                    >
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+            class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+            data-item="bbq"
+          >
+            <div class="card single-item">
+              <div class="img-container">
+                <img
+                  src="./img/magherita.jpg"
+                  class="card-img-top store-img"
+                  alt=""
+                />
+                <span class="store-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body">
+                <div
+                  class="card-text d-flex justify-content-between text-capitalize"
+                >
+                  <h5 class="store-item-name">MARGHERITA item</h5>
+                  <h5 class="store-item-value">
+                    Kshs.
+                    <strong
+                      class=""
+                      id="storm-item-price"
+                      class="font-weight-bold"
+                      >1000</strong
+                    >
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="services py-5" id="services">
         <div class="container">
             <div class="row">
-                <div class="col-10 mx-auto col-sm-6 text-center">
-                    <h1 class="text-capitalize">our <strong class="banner-title">store</strong></h1>
+                <div class="col-md-4 text-center my-3">
+                    <img src="./img/pizza-icon.png" alt="pizza icon" height="100px" width="100px">
+                    <h6 class="text-uppercase my-3 service-text">Pizza</h6>
+                    <p class="w-75 mx-auto text-left service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    </p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 mx-auto d-flex justify-content-around sortBtn flex-wrap">
-                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">all</a>
-                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">BBQ</a>
-                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">PERIPERI</a>
-                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">HAWAIIAN</a>
-                    <a href="#" class="btn btn-black text-uppercase filter-btn m-2" data-filter="all">MARGHERITA</a>
+                <div class="col-md-4 text-center my-3">
+                    <img src="./img/mushroom-icon.png" alt="pizza icon" height="100px" width="100px">
+                    <h6 class="text-uppercase my-3 service-text">Pizza</h6>
+                    <p class="w-75 mx-auto text-left service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    </p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-10 mx-auto col-md-6">
-                    <form>
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text search-box" id="search-icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="pizza..." id="search-item">
-                        </div>
-                    </form>
+                <div class="col-md-4 text-center my-3">
+                    <img src="./img/sauce-icon.png" alt="pizza icon" height="100px" width="100px">
+                    <h6 class="text-uppercase my-3 service-text">Pizza</h6>
+                    <p class="w-75 mx-auto text-left service-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    </p>
                 </div>
             </div>
         </div>
