order section html

--- a/index.html
+++ b/index.html
@@ -346,6 +346,56 @@
             </div>
         </div>
     </section>
+    <section id="pizzas" class="pizzas py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-10 mx-auto col-sm-6 text-center">
+                    <h1 class="text-capitalize">Order <strong class="banner-title">Pizza</strong></h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-capitalize text-center">
+                    <h3 class="py-3">BBQ Pizza</h3>
+                    <div class="text-muted">
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <button class="btn btn-maroon text-capitalize mb-3">order now</button>
+                        <p class="text-lowercase mb-4">starting at Kshs.450</p>
+                        <img src="./img/img1.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-capitalize text-center">
+                    <h3 class="py-3">BBQ Pizza</h3>
+                    <div class="text-muted">
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <button class="btn btn-maroon text-capitalize mb-3">order now</button>
+                        <p class="text-lowercase mb-4">starting at Kshs.450</p>
+                        <img src="./img/img1.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-capitalize text-center">
+                    <h3 class="py-3">BBQ Pizza</h3>
+                    <div class="text-muted">
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <p class="my-3"></p>
+                        <button class="btn btn-maroon text-capitalize mb-3">order now</button>
+                        <p class="text-lowercase mb-4">starting at Kshs.450</p>
+                        <img src="./img/img1.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- jquery -->
     <script src="js/jquery-3.3.1.min.js"></script>
