added more store's items

--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div
+          <div
             class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
             data-item="bbq"
           >
@@ -248,8 +247,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div
+          <div
             class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
             data-item="bbq"
           >
@@ -282,41 +280,209 @@
               </div>
             </div>
           </div>
-        </div>
-        <div
-            class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
-            data-item="bbq"
-          >
-            <div class="card single-item">
-              <div class="img-container">
-                <img
-                  src="./img/magherita.jpg"
-                  class="card-img-top store-img"
-                  alt=""
-                />
-                <span class="store-item-icon">
-                  <i class="fas fa-shopping-cart"></i>
-                </span>
-              </div>
-              <div class="card-body">
-                <div
-                  class="card-text d-flex justify-content-between text-capitalize"
-                >
-                  <h5 class="store-item-name">MARGHERITA item</h5>
-                  <h5 class="store-item-value">
-                    Kshs.
-                    <strong
-                      class=""
-                      id="storm-item-price"
-                      class="font-weight-bold"
-                      >1000</strong
-                    >
-                  </h5>
-                </div>
+          <div
+          class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+          data-item="bbq"
+        >
+          <div class="card single-item">
+            <div class="img-container">
+              <img
+                src="./img/magherita.jpg"
+                class="card-img-top store-img"
+                alt=""
+              />
+              <span class="store-item-icon">
+                <i class="fas fa-shopping-cart"></i>
+              </span>
+            </div>
+            <div class="card-body">
+              <div
+                class="card-text d-flex justify-content-between text-capitalize"
+              >
+                <h5 class="store-item-name">MARGHERITA item</h5>
+                <h5 class="store-item-value">
+                  Kshs.
+                  <strong
+                    class=""
+                    id="storm-item-price"
+                    class="font-weight-bold"
+                    >1000</strong
+                  >
+                </h5>
               </div>
             </div>
           </div>
         </div>
+        <div
+        class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+        data-item="bbq"
+      >
+        <div class="card single-item">
+          <div class="img-container">
+            <img
+              src="./img/periperi2.jpg"
+              class="card-img-top store-img"
+              alt=""
+            />
+            <span class="store-item-icon">
+              <i class="fas fa-shopping-cart"></i>
+            </span>
+          </div>
+          <div class="card-body">
+            <div
+              class="card-text d-flex justify-content-between text-capitalize"
+            >
+              <h5 class="store-item-name">MARGHERITA item</h5>
+              <h5 class="store-item-value">
+                Kshs.
+                <strong
+                  class=""
+                  id="storm-item-price"
+                  class="font-weight-bold"
+                  >1000</strong
+                >
+              </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+      class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+      data-item="bbq"
+    >
+      <div class="card single-item">
+        <div class="img-container">
+          <img
+            src="./img/bbq2.jpeg"
+            class="card-img-top store-img"
+            alt=""
+          />
+          <span class="store-item-icon">
+            <i class="fas fa-shopping-cart"></i>
+          </span>
+        </div>
+        <div class="card-body">
+          <div
+            class="card-text d-flex justify-content-between text-capitalize"
+          >
+            <h5 class="store-item-name">MARGHERITA item</h5>
+            <h5 class="store-item-value">
+              Kshs.
+              <strong
+                class=""
+                id="storm-item-price"
+                class="font-weight-bold"
+                >1000</strong
+              >
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+    class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+    data-item="bbq"
+  >
+    <div class="card single-item">
+      <div class="img-container">
+        <img
+          src="./img/periperi1.jpg"
+          class="card-img-top store-img"
+          alt=""
+        />
+        <span class="store-item-icon">
+          <i class="fas fa-shopping-cart"></i>
+        </span>
+      </div>
+      <div class="card-body">
+        <div
+          class="card-text d-flex justify-content-between text-capitalize"
+        >
+          <h5 class="store-item-name">MARGHERITA item</h5>
+          <h5 class="store-item-value">
+            Kshs.
+            <strong
+              class=""
+              id="storm-item-price"
+              class="font-weight-bold"
+              >1000</strong
+            >
+          </h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div
+  class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+  data-item="bbq"
+>
+  <div class="card single-item">
+    <div class="img-container">
+      <img
+        src="./img/bbq1.jpg"
+        class="card-img-top store-img"
+        alt=""
+      />
+      <span class="store-item-icon">
+        <i class="fas fa-shopping-cart"></i>
+      </span>
+    </div>
+    <div class="card-body">
+      <div
+        class="card-text d-flex justify-content-between text-capitalize"
+      >
+        <h5 class="store-item-name">MARGHERITA item</h5>
+        <h5 class="store-item-value">
+          Kshs.
+          <strong
+            class=""
+            id="storm-item-price"
+            class="font-weight-bold"
+            >1000</strong
+          >
+        </h5>
+      </div>
+    </div>
+  </div>
+</div>
+<div
+class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item bbq"
+data-item="bbq"
+>
+<div class="card single-item">
+  <div class="img-container">
+    <img
+      src="./img/magherita1.jpg"
+      class="card-img-top store-img"
+      alt=""
+    />
+    <span class="store-item-icon">
+      <i class="fas fa-shopping-cart"></i>
+    </span>
+  </div>
+  <div class="card-body">
+    <div
+      class="card-text d-flex justify-content-between text-capitalize"
+    >
+      <h5 class="store-item-name">MARGHERITA item</h5>
+      <h5 class="store-item-value">
+        Kshs.
+        <strong
+          class=""
+          id="storm-item-price"
+          class="font-weight-bold"
+          >1000</strong
+        >
+      </h5>
+    </div>
+  </div>
+</div>
+</div>
+      </div>
+        </div>
+        </div>
+        </div>
+    
       </div>
     </section>
     <section class="services py-5" id="services">
@@ -355,7 +521,7 @@
             </div>
             <div class="row">
                 <div class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-capitalize text-center">
-                    <h3 class="py-3">BBQ Pizza</h3>
+                    <h3 class="py-3">Small Pizza</h3>
                     <div class="text-muted">
                         <p class="my-3"></p>
                         <p class="my-3"></p>
@@ -368,7 +534,7 @@
                     </div>
                 </div>
                 <div class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-capitalize text-center">
-                    <h3 class="py-3">BBQ Pizza</h3>
+                    <h3 class="py-3">Medium Pizza</h3>
                     <div class="text-muted">
                         <p class="my-3"></p>
                         <p class="my-3"></p>
@@ -376,12 +542,12 @@
                         <p class="my-3"></p>
                         <p class="my-3"></p>
                         <button class="btn btn-maroon text-capitalize mb-3">order now</button>
-                        <p class="text-lowercase mb-4">starting at Kshs.450</p>
-                        <img src="./img/img1.png" class="img-fluid" alt="">
+                        <p class="text-lowercase mb-4">starting at Kshs.750</p>
+                        <img src="./img/img2.png" class="img-fluid" alt="">
                     </div>
                 </div>
                 <div class="col-11 mx-auto col-md-6 col-lg-4 my-4 text-capitalize text-center">
-                    <h3 class="py-3">BBQ Pizza</h3>
+                    <h3 class="py-3">Large Pizza</h3>
                     <div class="text-muted">
                         <p class="my-3"></p>
                         <p class="my-3"></p>
@@ -389,8 +555,8 @@
                         <p class="my-3"></p>
                         <p class="my-3"></p>
                         <button class="btn btn-maroon text-capitalize mb-3">order now</button>
-                        <p class="text-lowercase mb-4">starting at Kshs.450</p>
-                        <img src="./img/img1.png" class="img-fluid" alt="">
+                        <p class="text-lowercase mb-4">starting at Kshs.1000</p>
+                        <img src="./img/img3.png" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
