--- a/index.html
+++ b/index.html
@@ -563,6 +563,51 @@ data-item="bbq"
         </div>
     </section>
 
+    <footer>
+        <div class="container-fluid">
+            <div class="col-md-6 footer py-5">
+                <h1 class="text-capitalize text-center">
+                    <strong class="banner-title">Pizza On</strong>
+                </h1>
+                <div class="footer-icons mt-3 d-flex justify-content-around flex-wrap">
+                    <a href="#" class="footer-icon">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#" class="footer-icon">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" class="footer-icon">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="footer-icon">
+                        <i class="fab fa-google-plus"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6 footer-contact text-center text-capitalize p-5">
+                <h3 class="mb-5">contact</h3>
+                <p class="d-flex flex-wrap">
+                    <span class="mr-4 footer-icon">
+                        <i class="fas fa-map"></i>
+                    </span>
+                    <span>1231-00621, Village Market</span>
+                </p>
+                <p class="d-flex flex-wrap">
+                    <span class="mr-4 footer-icon">
+                        <i class="fas fa-phone"></i>
+                    </span>
+                    <span>+254 715 051 497</span>
+                </p>
+                <p class="d-flex flex-wrap">
+                    <span class="mr-4 footer-icon">
+                        <i class="fas fa-envelope"></i>
+                    </span>
+                    <span>hamsoace@gmail.com</span>
+                </p>
+            </div>
+        </div>
+    </footer>
+
     <!-- jquery -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <!-- bootstrap js -->
